--- a/src/index.css
+++ b/src/index.css
@@ -171,27 +171,6 @@ code {
     monospace;
 }
 
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: blur(4px);
-  background: rgba(0, 0, 0, 0.5);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1000;
-}
-
-.modal {
-  background: white;
-  padding: 20px;
-  border-radius: 12px;
-  text-align: center;
-}
-
 
 
 .cancel {
@@ -228,6 +207,7 @@ code {
 }
 
 .modal {
+  width: 300px;
   background: white;
   padding: 20px;
   border-radius: 12px;
@@ -268,4 +248,46 @@ code {
 
 .cancel {
   background: #ccc;
+}
+
+label {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  color: #333;
+}
+/*<div className="control-buttons"> */
+.control-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.control-buttons button {
+  width: 125px;
+  padding: 5px 10px;
+  cursor: pointer;
+  transition: background 0.3s ease, transform 0.2s ease;
+  border-radius: 4px;
+  border: 4px solid #613225;
+  background: #7c5a51;
+  color: #95A791;
+  text-align: center;
+  font-family: "Pixelify Sans", sans-serif;
+  font-size: 24px;
+  font-style: bold;
+  line-height: normal;  
+}
+.control-buttons button:hover {
+  transform: translateY(-2px);
+}
+
+.control-buttons button:active {
+  transform: translateY(0);
+  background-color: #7a4e32; /* Darker on click */
+}
+
+.control-buttons button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
 }
