--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,8 @@ body {
   border-radius: 20px; 
   box-sizing: border-box;
   overflow: hidden;
+  caret-color: transparent;
+
 
 }
 
@@ -31,6 +33,8 @@ body {
   width: 100%;
   height: 100vh; /* Full viewport height */
 }
+
+
 .title {
 margin: 0;
 color: #95A791;
@@ -100,6 +104,8 @@ button {
   border: none;
   padding: 0;
   cursor: pointer;
+  transition: background 0.3s ease, transform 0.2s ease;
+
   -webkit-app-region: no-drag;
 
 }
@@ -128,7 +134,6 @@ button {
   font-style: normal;
   font-weight: 400;
   line-height: normal;  
-  
 }
 
 #menu{
@@ -136,7 +141,7 @@ button {
   z-index: 1; /* Ensures the overlay is on top */
   bottom: 0; /* Aligns the overlay at the bottom */
   padding-left: 110px;
-    -webkit-app-region: no-drag;
+  -webkit-app-region: no-drag;
 
 }
 #menu:hover{
@@ -145,13 +150,29 @@ button {
 
 }
 
-button:hover{
+#menu2{
+  position: absolute;
+  z-index: 1; /* Ensures the overlay is on top */
+  -webkit-app-region: no-drag;
+  padding-right:10px;
+  padding-top:10px;
+  right: 0;
+  top: 0; 
+}
+#menu2:hover{
+  cursor: pointer;
   transform: scale(1.1); /* Slightly enlarge on hover */
+
+}
+
+button:hover{
+  transform: translateY(-2px);
   cursor: pointer;
 
 }
 
 .container {
+  position: relative; /* Ensure children with absolute positioning are relative to this container */
   width: 100%; /* Adjust the size as needed */
   height: 275px; /* Adjust the size as needed */
   border-radius: 5px;
@@ -166,6 +187,13 @@ button:hover{
   border-radius: 8px; /* Optional: rounded corners */
 }
 
+#SleepingCat{
+  -webkit-app-region: no-drag;
+}
+#SleepingCat:hover{
+  cursor: pointer;
+  transform: scale(1.1); /* Slightly enlarge on hover */
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
@@ -176,6 +204,7 @@ code {
 .cancel {
   background: #ccc;
 }
+
 .time{
   z-index: 1; /* Ensures the overlay is on top */
   position: absolute; /* Positions the overlay relative to the flex container */
@@ -192,6 +221,12 @@ code {
   cursor: pointer;
   transform: scale(1.1); /* Slightly enlarge on hover */
 }
+
+h1{
+    color: #95A791;
+    
+    font-family: "Pixelify Sans", sans-serif;
+  }
 .overlay {
   position: fixed;
   top: 0;
@@ -204,11 +239,13 @@ code {
   align-items: center;
   justify-content: center;
   z-index: 1000;
+  
 }
 
 .modal {
   width: 300px;
-  background: white;
+  border:#613225 4px solid;
+  background: #e5dac6;
   padding: 20px;
   border-radius: 12px;
   text-align: center;
@@ -235,27 +272,55 @@ code {
   text-align: center;
   overflow-y: scroll;
   border-radius: 8px;
-  border: 1px solid #ccc;
+  border:#95A791 4px solid;
   background: #f9f9f9;
   scroll-snap-type: y mandatory;
+  
+  outline: none;
+
+  
+  /* Hide scrollbar - Webkit (Chrome, Safari) */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer/Edge */
 }
+
+.picker-column select::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, and Opera */
+}
+
 
 .picker-column option {
   scroll-snap-align: center;
+  gap: 10px;
   padding: 10px 0;
 }
 
-
-.cancel {
-  background: #ccc;
+option{
+  background: #e5dac6;
+  color: #95A791;
+  font-family: "Press Start 2P", "Pixelify Sans", sans-serif; 
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
+
+
+option:hover{
+ background: #b6c7b1;
+ color: #e5dac6;
+}
+option:checked {
+ background: #95A791;
+ color: #e5dac6;
+}
+
 
 label {
-  font-size: 1.2rem;
-  margin-bottom: 10px;
-  color: #333;
+    color: #95A791;
+    font-family: "Pixelify Sans", sans-serif;
 }
-/*<div className="control-buttons"> */
+
 .control-buttons {
   display: flex;
   justify-content: center;
@@ -291,3 +356,40 @@ label {
   background-color: #ccc;
   cursor: not-allowed;
 }
+
+/* Add any additional styles here */
+.food{
+  width: 150x;
+  height:150px;
+  border-radius: 8px; /* Optional: rounded corners */
+  transition: transform 0.2s ease;
+  -webkit-app-region: no-drag;
+}
+
+.food-title {
+  z-index: 1;
+  position: absolute;
+  color: #95A791;
+  -webkit-app-region: no-drag;
+  font-family: "Press Start 2P", "Pixelify Sans", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  white-space: nowrap;
+  display: inline-block;
+  top: 20px; 
+  transform-origin: left center;
+  padding: 10px; /* Added padding */
+  text-align: center;
+  box-sizing: border-box; /* Include padding in width calculations */
+}
+.food-text {
+  color: #95A791;
+  font-family: "Press Start 2P", "Pixelify Sans", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+
+  text-align: center;
+  font-size: 13px;
+}
+
+
